force-app/main/default/objects/Credit_Memo__c/fields/API_Message__c.field-meta.xml
<CustomField>
    <fullName>API_Message__c</fullName>
    <label>API Message</label>
    <type>TextArea</type>
</CustomField>