force-app/main/default/objects/Credit_Memo__c/fields/API_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Request_ID__c</fullName>
    <label>API Request ID</label>
    <type>TextArea</type>
</CustomField>