force-app/main/default/objects/Credit_Memo__c/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <label>API Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>ToBeRequested</fullName>
            </value>
            <value>
                <fullName>NotRequested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>