force-app/main/default/objects/Credit_Memo__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Clients__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>