force-app/main/default/objects/Credit_Memo__c/fields/CreditMemo__c.field-meta.xml
<CustomField>
    <fullName>CreditMemo__c</fullName>
    <label>CreditMemo No</label>
    <type>TextArea</type>
</CustomField>