force-app/main/default/objects/Credit_Memo__c/fields/CreditMemo_Status__c.field-meta.xml
<CustomField>
    <fullName>CreditMemo_Status__c</fullName>
    <label>CreditMemo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todo</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Not Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>