force-app/main/default/objects/Credit_Memo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>API_Message__c</columns>
    <columns>API_Request_ID__c</columns>
    <columns>API_Status__c</columns>
    <columns>Client__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CreditMemo__c</columns>
    <columns>CreditMemo_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>